tenzir/integration/data/reference/parser/test_functions/step_01.ref
error: expected one of: identifier, dollar identifier, `this`, `not`, `_`, integer, `true`, `false`, `null`, string, `-`, `(`, `)`, `{`, `[`
 --> /dev/stdin:1:7
  |
1 | a = b(,)
  |       ^ got `,`
  |